samples/_failures_safe/1761005460_c7613a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5d1396c.c: In function ‘main’:
./samples/SAFE/__tmp_b5d1396c.c:141:9: error: expected expression at end of input
  141 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b5d1396c.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5d1396c.c:141:9: error: expected declaration or statement at end of input
